--- a/style/chart.less
+++ b/style/chart.less
@@ -1,30 +1,31 @@
-.scales {
-	:global(.scale) {
-		fill: red;
-		stroke: #FFF;
-		stroke-width: 1;
-		stroke-opacity: 0.6;
+.circel-chart-svg {
+	.scales {
+		.scale {
+			fill: red;
+			stroke: #FFF;
+			stroke-width: 1;
+			stroke-opacity: 0.6;
+		}
+		.scale-site {
+			fill: red;
+			stroke: #fff;
+			stroke-width: 2;
+			stroke-opacity: 1;
+		}
 	}
-	:global(.scale-site) {
-		fill: red;
-		stroke: #fff;
-		stroke-width: 2;
-		stroke-opacity: 1;
+
+	.text-value {
+		font-family: sans-serif;
+		font-size: 90px;
+		font-weight: bold;
+		text-anchor: middle;
+		dominant-baseline: middle;
 	}
-}
 
-.text-value {
-	font-family: sans-serif;
-	font-size: 90px;
-	font-weight: bold;
-	text-anchor: middle;
-	dominant-baseline: middle;
-}
-
-.text-title {
-	font-family: sans-serif;
-	font-size: 18px;
-	// font-weight: bold;
-	text-anchor: middle;
-	dominant-baseline: middle;
+	.text-title {
+		font-family: sans-serif;
+		font-size: 18px;
+		text-anchor: middle;
+		dominant-baseline: middle;
+	}
 }
