[add] 添加两种类型的原形图表

--- a/style/chart.less
+++ b/style/chart.less
@@ -17,7 +17,7 @@
 	.text-value {
 		font-family: sans-serif;
 		font-size: 90px;
-		font-weight: bold;
+		font-weight: 400;
 		text-anchor: middle;
 		dominant-baseline: middle;
 	}
@@ -26,6 +26,14 @@
 		font-family: sans-serif;
 		font-size: 18px;
 		text-anchor: middle;
+		dominant-baseline: middle;
+	}
+
+	.text-scale {
+		font-family: sans-serif;
+		font-size: 22px;
+		text-anchor: middle;
+		fill: #CCC;
 		dominant-baseline: middle;
 	}
 }
