[modify] 修正字体及支持刻度表的自定义字体颜色

--- a/style/chart.less
+++ b/style/chart.less
@@ -15,7 +15,7 @@
 	}
 
 	.text-value {
-		font-family: sans-serif;
+		font-family: "Microsoft YaHei", Arial, sans-serif;;
 		font-size: 90px;
 		font-weight: 400;
 		text-anchor: middle;
@@ -23,14 +23,14 @@
 	}
 
 	.text-title {
-		font-family: sans-serif;
+		font-family: "Microsoft YaHei", Arial, sans-serif;;
 		font-size: 28px;
 		text-anchor: middle;
 		dominant-baseline: middle;
 	}
 
 	.text-scale {
-		font-family: sans-serif;
+		font-family: "Microsoft YaHei", Arial, sans-serif;;
 		font-size: 24px;
 		text-anchor: middle;
 		fill: #CCC;
